# MyServerFramework

./: .gitignore  CMakeLists.txt  GenerateMakeLists_Config.txt  MyServerFramework.sln  README.md
MyServerFramework/: CMakeLists.txt  MyServerFramework.vcxproj  MyServerFramework.vcxproj.filters  cpp.hint  main.cpp
MyServerFramework/Game/: UnityBuildGame.cpp
MyServerFramework/Game/Character/: CharacterGame.cpp  CharacterGame.h  CharacterGameData.cpp  CharacterGameData.h  CharacterPlayer.cpp  CharacterPlayer.h  CharacterPlayerData.cpp  CharacterPlayerData.h  CharacterRegister.cpp  CharacterRegister.h
MyServerFramework/Game/Common/: GameBase.cpp  GameBase.h  GameCallback.h  GameClassDeclare.h  GameDefine.cpp  GameDefine.h  GameEnum.h  GameEnumCheck.h  GameHeader.h  GameMacro.h  GameSTLPoolRegister.cpp  GameSTLPoolRegister.h  GameStringDefine.h
MyServerFramework/Game/Component/: GameComponentRegister.cpp  GameComponentRegister.h
MyServerFramework/Game/Config/: GameConfigSystem.cpp  GameConfigSystem.h
MyServerFramework/Game/DataBase/MySQL/: MySQLRegister.cpp  MySQLRegister.h
MyServerFramework/Game/DataBase/MySQL/Data/: MDAccount.cpp  MDAccount.h
MyServerFramework/Game/DataBase/MySQL/Table/: MySQLAccount.cpp  MySQLAccount.h
MyServerFramework/Game/DataBase/SQLite/: SQLiteRegister.cpp  SQLiteRegister.h
MyServerFramework/Game/Game/: Game.cpp  Game.h
MyServerFramework/Game/Socket/: GamePacketDefine.h  GamePacketRegister.cpp  GamePacketRegister.h
MyServerFramework/Game/Socket/ClientServer/: CSAttack.cpp  CSAttack.h  CSCheckPacketVersion.cpp  CSCheckPacketVersion.h  CSLogin.cpp  CSLogin.h  CSServerCheckPing.cpp  CSServerCheckPing.h
MyServerFramework/Game/Socket/ServerClient/: SCAttack.cpp  SCAttack.h  SCCharacterFullGameData.cpp  SCCharacterFullGameData.h  SCCheckPacketVersion.cpp  SCCheckPacketVersion.h  SCGetItemTip.cpp  SCGetItemTip.h  SCServerCheckPing.cpp  SCServerCheckPing.h
MyServerFramework/Game/Socket/Struct/: NetStructItemInfo.cpp  NetStructItemInfo.h
MyServerFramework/Game/Utility/: GameUtility.cpp  GameUtility.h
MyServerFramework_Frame/: CMakeLists.txt  MyServerFramework_Frame.vcxproj  MyServerFramework_Frame.vcxproj.filters  cpp.hint
MyServerFramework_Frame/Frame/: UnityBuildFrame.cpp
MyServerFramework_Frame/Frame/Character/: Character.cpp  Character.h  CharacterManager.cpp  CharacterManager.h  MovableObject.cpp  MovableObject.h
MyServerFramework_Frame/Frame/ClassPool/: ClassBaseTypePool.h  ClassBaseTypePoolThread.h  ClassKeyPool.h  ClassKeyPoolThread.h  ClassPool.h  ClassPoolBase.cpp  ClassPoolBase.h  ClassPoolThread.h  ClassPooledObject.h  ClassTypePool.h  ClassTypePoolThread.h  IntPoolThread.h  PodPoolThread.h
MyServerFramework_Frame/Frame/CommandSystem/: CommandReceiver.cpp  CommandReceiver.h  CommandSystem.cpp  CommandSystem.h  DelayCommand.h  GameCommand.cpp  GameCommand.h
MyServerFramework_Frame/Frame/Common/: ComponentRegisterFrame.cpp  ComponentRegisterFrame.h  DoubleBuffer.cpp  DoubleBuffer.h  DoubleBufferReadScope.h  Dump.cpp  Dump.h  FrameBase.cpp  FrameBase.h  FrameCallback.h  FrameClassDeclare.h  FrameDefine.cpp  FrameDefine.h  FrameEnum.h  FrameEnumCheck.h  FrameHeader.h  FrameMacro.h  FrameStringDefine.h  Keyframe.h  LocaleGBKScope.h  LocaleUTF8Scope.h  ObjectTool.cpp  ObjectTool.h  RandomSystem.cpp  RandomSystem.h  Singleton.h  StreamBuffer.cpp  StreamBuffer.h
MyServerFramework_Frame/Frame/Component/: ComponentOwner.cpp  ComponentOwner.h  IComponentInterface.h
MyServerFramework_Frame/Frame/Config/: FrameConfigSystem.cpp  FrameConfigSystem.h
MyServerFramework_Frame/Frame/EventSystem/: EventInfo.h  EventProcess.h  EventSystem.cpp  EventSystem.h  GameEvent.h  IEventListener.h
MyServerFramework_Frame/Frame/Factory/: CharacterFactoryManager.h  CharacterStateFactoryManager.h  FactoryManager.h  GameComponentFactoryManager.h  PacketTCPFactoryManager.h  PacketWebSocketFactoryManager.h  StateParamFactoryManager.h
MyServerFramework_Frame/Frame/InputSystem/: InputSystem.cpp  InputSystem.h  KeyState.h
MyServerFramework_Frame/Frame/KeyframeManager/: AnimationCurve.cpp  AnimationCurve.h  KeyframeManager.cpp  KeyframeManager.h
MyServerFramework_Frame/Frame/Log/: GameLogWrap.cpp  GameLogWrap.h  LogFileInfo.h  LogInfo.cpp  LogInfo.h  LogSystem.cpp  LogSystem.h
MyServerFramework_Frame/Frame/Math/: Color.h  Quaternion.h  Vector2.h  Vector2Int.h  Vector2Short.h  Vector2UInt.h  Vector2UShort.h  Vector3.h  Vector3Int.h  Vector4.h  Vector4Int.h
MyServerFramework_Frame/Frame/Memory/: ShareMemoryServer.cpp  ShareMemoryServer.h
MyServerFramework_Frame/Frame/Net/: Packet.cpp  Packet.h  PacketBit.h  PacketByte.h  PacketTCP.cpp  PacketTCP.h  PacketWebSocket.cpp  PacketWebSocket.h
MyServerFramework_Frame/Frame/Param/: ParamSet.cpp  ParamSet.h  StateParamMember.cpp  StateParamMember.h  StateParamMemberValue.h
MyServerFramework_Frame/Frame/STL/: Array.h  ArrayList.h  HashMap.h  Map.h  MyString.h  Set.h  Vector.h
MyServerFramework_Frame/Frame/Serialize/: SerializableBitData.h  SerializableData.h  SerializerBitRead.cpp  SerializerBitRead.h  SerializerBitWrite.cpp  SerializerBitWrite.h  SerializerRead.cpp  SerializerRead.h  SerializerWrite.cpp  SerializerWrite.h
MyServerFramework_Frame/Frame/ServerFramework/: FrameComponent.h  ServerFramework.cpp  ServerFramework.h
MyServerFramework_Frame/Frame/StateManager/: FrameStateManager.cpp  FrameStateManager.h
MyServerFramework_Frame/Frame/Thread/: CustomThread.cpp  CustomThread.h  ThreadLock.cpp  ThreadLock.h  ThreadLockScope.h  ThreadManager.cpp  ThreadManager.h  TimeLock.cpp  TimeLock.h
MyServerFramework_Frame/Frame/TimePointSystem/: TimePointSystem.cpp  (+3 more)
ToolProject/CodeGenerator/: CodeGenerator.vcxproj  CodeGenerator.vcxproj.filters
ToolProject/GenerateMakeLists/: GenerateMakeLists.vcxproj
ToolProject/GenerateVSProject/: Program.cs
media/Config/: FrameConfig.txt
文档/: linux命令.txt  linux编译.txt  linux错误解决日志.txt
自动生成代码/: CodeGenerator_Config.txt  GenerateVSProject_Config.txt  GenerateVSProject_Config_Template.txt  MySQL.txt  PacketCS.txt  PacketSC.txt  PacketStruct.txt
(+333 files in other folders)
